fixing ui on mobile of form

--- a/src/components/styles/OrderStatusSelect.css
+++ b/src/components/styles/OrderStatusSelect.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 37.5px 0 75px;
+  margin: 25px 0 67.5px;
   position: relative;
   z-index: 1;
 }
@@ -71,7 +71,7 @@ label.order-select-order-delivered:hover {
   height: 1px;
   background-color: #b5b5b5;
   position: relative;
-  top: -100px;
+  top: -93px;
   z-index: 0;
   transition: 0.4s ease-in-out;
 }
@@ -94,12 +94,15 @@ label.order-select-order-delivered:hover {
 
 @media (min-width: 375px) {
   .status {
-    margin: 37.5px 0 75px;
+    margin: 25px 0 75px;
   }
   .status li p {
-    font-size: 12px;
-    margin-top: 42.5px;
+    margin-top: 35px;
   }
+  .progress-bar {
+    top: -100px;
+  }
+  /*
   .status li {
     width: 60px;
     height: 60px;
@@ -113,9 +116,7 @@ label.order-select-order-delivered:hover {
     top: 5px;
     left: 5px;
   }
-  .progress-bar {
-    top: -105px;
-  }
+  */
 }
 
 @media (min-width: 768px) {
